# NumPadHotkeys

./: .gitignore  CMakeLists.txt  LICENSE  Makefile.mingw  README.md  build_msvc.bat
res/: NumPadHotkeys.rc  gen_icons.ps1
src/: config.cpp  config.h  hook.cpp  hook.h  main.cpp  resource.h  tray.cpp  tray.h  ui_config.cpp  ui_config.h
